<resources>
    <string name="app_name">ZPAM</string>
    <string name="dane_osobowe">Dane Osobowe</string>
    <string name="logowanie">Logowanie</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj</string>
    <string name="register">Zarejestruj</string>
    <string name="personal_data">Dane osobowe</string>
    <string name="address_data">Dane adresowe</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="back">Powrót</string>
    <string name="date_of_birth">Data urodzenia</string>
    <string name="phone_number">nr Telefonu</string>
    <string name="Address">Adres pocztowy</string>
    <string name="save">Zapisz</string>
    <string name="repeat_passowrd">Powtórz hasło</string>
    <string name="back_to_login">Powrót do logowania</string>
    <string name="choroba1">Choroba1</string>
    <string name="im_a_doctor">Jestem lekarzem</string>
    <string name="is_not_a_doctor">Nie jestem lekarzem</string>
    <string name="powr_t">Powrót</string>
    <string name="powrót" />
    <string name="wyszukiwanie_lekarzy">Wyszukiwanie lekarzy</string>
    <string name="przegladanie">Przegladanie</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="nowe_zgloszenie">Nowe zgloszenie</string>
    <string name="czy_wiedzia_e_e">Czy wiedziałeś że...?</string>
    <string name="czy_wiedziles_ze">Czy wiedziles ze</string>
    <string name="czy_wiedziales_ze">Czy wiedziales, ze</string>
    <string name="choose_doctor">Wybierz doktora</string>
</resources>

