<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_purple_gradient"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/login_doctor_login_textView"
        android:layout_width="149dp"
        android:layout_height="35dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background_text_purple_see_through"
        android:text="@string/logowanie"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_doctor_emailAddress_text"
        android:layout_width="@dimen/_250pxh"
        android:layout_height="@dimen/_75pxh"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#FBF7F7"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/login_doctor_password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_doctor_login_textView" />

    <EditText
        android:id="@+id/login_doctor_password_text"
        android:layout_width="@dimen/_250pxh"
        android:layout_height="@dimen/_75pxh"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_doctor_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_doctor_emailAddress_text" />

    <Button
        android:id="@+id/login_doctor_login_button"
        android:layout_width="@dimen/_250pxh"
        android:layout_height="@dimen/_75pxh"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_doctor_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_doctor_password_text" />

    <Button
        android:id="@+id/login_doctor_register_button"
        android:layout_width="@dimen/_250pxh"
        android:layout_height="@dimen/_75pxh"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_doctor_login_button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dodaj słowa klucze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginDoctor_notDoctorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_not_a_doctor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>